# protocol

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WORKFLOW_EXAMPLE.md  test_workflow.md  test_workflow_test.md
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  deploy.yml  sdk.yml
.jjconflict-base-0/: CONTRIBUTING.md
.jjconflict-base-0/bins/objects-node/src/: service.rs
.jjconflict-base-0/crates/objects-data/src/: encryption.rs
.jjconflict-base-0/crates/objects-data/tests/: property_test.proptest-regressions
.jjconflict-base-0/crates/objects-identity/src/: error.rs  vault.rs
.jjconflict-base-0/crates/objects-sync/tests/: integration_tests.rs
.jjconflict-base-0/crates/objects-transport/: Cargo.toml
.jjconflict-base-0/crates/objects-transport/src/: connection.rs  error.rs
.jjconflict-base-0/crates/objects-transport/tests/: integration_test.rs  property_test.proptest-regressions
.jjconflict-base-0/proto/: buf.yaml
.jjconflict-side-0/: .env.example  Cargo.toml  README.md  SECURITY.md
.jjconflict-side-0/.github/: PULL_REQUEST_TEMPLATE.md
.jjconflict-side-0/bins/objects-cli/src/: main.rs
.jjconflict-side-0/bins/objects-node/src/: service.rs
.jjconflict-side-0/bins/objects-node/tests/: e2e_sync.rs
.jjconflict-side-0/crates/objects-common/src/: lib.rs
.jjconflict-side-0/crates/objects-data/src/: asset.rs  storage.rs
.jjconflict-side-0/crates/objects-data/tests/: property_test.rs
.jjconflict-side-0/crates/objects-identity/: Cargo.toml  build.rs
.jjconflict-side-0/crates/objects-identity/tests/: integration_test.rs  property_test.rs
.jjconflict-side-0/crates/objects-transport/src/: config.rs
.jjconflict-side-1/: .dockerignore  .gitignore  LICENSE-APACHE
.jjconflict-side-1/.github/ISSUE_TEMPLATE/: bug_report.yml
.jjconflict-side-1/.github/workflows/: claude-code-review.yml
.jjconflict-side-1/bins/objects-cli/: Cargo.toml
.jjconflict-side-1/bins/objects-cli/src/: client.rs  error.rs
.jjconflict-side-1/bins/objects-node/: Cargo.toml
.jjconflict-side-1/crates/objects-data/: Cargo.toml  build.rs
.jjconflict-side-1/crates/objects-sync/: Cargo.toml
.jjconflict-side-1/docker/: node.Dockerfile
.serena/: project.yml
bins/objects-cli/: Cargo.toml
bins/objects-cli/src/: client.rs  config.rs  connect.rs  error.rs  lib.rs  main.rs  types.rs
bins/objects-cli/src/commands/: asset.rs  identity.rs  init.rs  mod.rs  project.rs  status.rs  ticket.rs  vault.rs
bins/objects-cli/tests/: client_tests.rs  config_tests.rs
bins/objects-cli/tests/integration/: asset_tests.rs  identity_tests.rs  init_tests.rs  main.rs  status_tests.rs
bins/objects-health/: Cargo.toml
bins/objects-health/src/: main.rs
bins/objects-node/: Cargo.toml
bins/objects-node/src/: config.rs  defaults.rs  lib.rs  main.rs  service.rs  state.rs
bins/objects-node/src/api/: client.rs  error.rs  handlers.rs  mod.rs  routes.rs  types.rs
bins/objects-node/tests/: e2e_full_stack.rs  e2e_node_api.rs  e2e_sync.rs
bins/objects-node/tests/harness/: mod.rs  node.rs  registry.rs
bins/objects-registry/: Cargo.toml
bins/objects-registry/migrations/: 20240101000000_create_identities.sql
bins/objects-registry/src/: config.rs  error.rs  lib.rs  main.rs  verification.rs
bins/objects-registry/src/api/: mod.rs
bins/objects-registry/src/api/grpc/: mod.rs
bins/objects-registry/src/api/rest/: handlers.rs  mod.rs  routes.rs  types.rs
bins/objects-registry/src/db/: mod.rs  models.rs  pool.rs  queries.rs
bins/objects-registry/tests/: concurrency_tests.rs  integration_tests.rs
crates/objects-common/: Cargo.toml
crates/objects-common/src/: config.rs
crates/objects-core/: Cargo.toml  build.rs
crates/objects-core/src/: config.rs  defaults.rs  engine.rs  lib.rs  node_api.rs  proto_gen.rs  service.rs  state.rs
crates/objects-core/src/api/: handlers.rs  mod.rs  routes.rs  types.rs
crates/objects-core/src/rpc/: mod.rs  proto.rs
crates/objects-core/tests/: engine_e2e.rs  engine_identity_e2e.rs
crates/objects-data/: Cargo.toml  build.rs
crates/objects-data/src/: asset.rs  encryption.rs  error.rs  lib.rs  project.rs  proto.rs  reference.rs  storage.rs
crates/objects-data/tests/: integration_test.rs  property_test.rs
crates/objects-data/tests/common/: mod.rs
crates/objects-ffi/: Cargo.toml  uniffi.toml
crates/objects-ffi/src/: error.rs  lib.rs  node.rs  types.rs
crates/objects-identity/: Cargo.toml
crates/objects-identity/src/: error.rs  handle.rs  id.rs  lib.rs  message.rs  proto.rs  signature.rs  signer.rs  signing.rs  vault.rs
crates/objects-identity/tests/: integration_test.rs  property_test.rs
crates/objects-identity/tests/common/: mod.rs
crates/objects-sync/: Cargo.toml
crates/objects-sync/src/: blobs.rs  docs.rs  engine.rs  error.rs  helpers.rs  lib.rs  tickets.rs
crates/objects-sync/src/storage/: blobs.rs  docs.rs  mod.rs
crates/objects-sync/tests/: integration_tests.rs  multi_node_sync.rs  test_utils.rs  two_node_sync.rs
crates/objects-test-utils/: Cargo.toml
crates/objects-test-utils/src/: crypto.rs  data.rs  identity.rs  lib.rs  rfc_vectors.rs  sync.rs  time.rs  transport.rs
crates/objects-test-utils/tests/: self_test.rs
crates/objects-transport/: Cargo.toml
crates/objects-transport/src/: announcement.rs  config.rs  connection.rs  discovery.rs  endpoint.rs  error.rs  lib.rs
crates/objects-transport/src/discovery/: bootstrap.rs  gossip.rs  mod.rs  peer_table.rs
crates/objects-transport/tests/: integration_test.rs  property_test.rs
crates/objects-transport/tests/common/: mod.rs
docker/: .dockerignore  compose.yml  node.Dockerfile  registry.Dockerfile  test-compose.yml
docs/: test-coverage-audit.md
infra/functions/stability-report/: main.py
infra/monitoring/: devnet-alert-policy.json  stability-report-alert.json
rfcs/: DEVNET-CHECKLIST.md  IMPLEMENTATION-HANDOFF.md  RFC-000-overview.md  RFC-001-identity.md  RFC-002-transport.md  RFC-003-sync.md  RFC-004-data.md  RFC-005-backup.md
(+22 files in other folders)
