[package]
name = "objects-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for OBJECTS Protocol"

[dependencies]
objects-identity.workspace = true
objects-data.workspace = true
objects-transport.workspace = true
objects-sync.workspace = true

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
