[package]
name = "objects-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for OBJECTS Protocol"

[[bin]]
name = "objects"
path = "src/main.rs"

[lib]
name = "objects_cli"
path = "src/lib.rs"

[dependencies]
objects-core.workspace = true
objects-common.workspace = true
objects-transport.workspace = true

# CLI
clap.workspace = true

# RPC
irpc.workspace = true
irpc-iroh.workspace = true
iroh.workspace = true

# Config
toml.workspace = true
url.workspace = true
dirs = "6"

# Async
tokio.workspace = true

# File detection
new_mime_guess.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
temp-env.workspace = true
serial_test.workspace = true
