[package]
name = "objects-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node daemon for OBJECTS Protocol"

[dependencies]
objects-identity.workspace = true
objects-data.workspace = true
objects-transport.workspace = true
objects-sync.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Config
url.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
temp-env = "0.3"
rand.workspace = true
objects-test-utils.workspace = true
