[package]
name = "objects-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node daemon for OBJECTS Protocol"

[dependencies]
objects-core.workspace = true
objects-identity.workspace = true
objects-transport.workspace = true
objects-sync.workspace = true

# Async
tokio.workspace = true

# Serialization
serde_json.workspace = true
hex.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# System utilities
dirs = "5.0"

[dev-dependencies]
tempfile.workspace = true
objects-test-utils.workspace = true
