[package]
name = "objects-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for OBJECTS Protocol"

[dependencies]
# Serialization
serde.workspace = true
toml.workspace = true

# Utilities
dirs = "6"
