[package]
name = "objects-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embeddable core engine for OBJECTS Protocol"

[dependencies]
objects-identity.workspace = true
objects-data.workspace = true
objects-transport.workspace = true
objects-sync.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# P2P
iroh.workspace = true
iroh-gossip.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
bytes.workspace = true

# HTTP API (temporary — will be replaced by irpc in PR 4-6)
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
hex.workspace = true
base64.workspace = true
reqwest.workspace = true

# Config
url.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Random number generation
rand.workspace = true

# Logging
tracing.workspace = true

# System utilities
dirs = "5.0"

[dev-dependencies]
tempfile.workspace = true
temp-env = "0.3"
wiremock.workspace = true
objects-test-utils.workspace = true
http-body-util = "0.1"
tracing-subscriber.workspace = true
