[package]
name = "objects-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Blob and metadata sync for OBJECTS Protocol"

[dependencies]
objects-identity.workspace = true
objects-data.workspace = true
objects-transport.workspace = true

# Iroh
iroh.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true

# Crypto
blake3.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
