[package]
name = "objects-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Blob and metadata sync for OBJECTS Protocol"

[dependencies]
objects-identity.workspace = true
objects-data.workspace = true
objects-transport.workspace = true

# Iroh
iroh.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true
iroh-gossip.workspace = true

# Crypto
blake3.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# File system utilities
walkdir = "2"

[dev-dependencies]
objects-test-utils.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
hex.workspace = true
