[package]
name = "objects-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Iroh-based transport layer for OBJECTS Protocol"

[dependencies]
objects-identity.workspace = true

# Iroh
iroh.workspace = true
iroh-gossip.workspace = true

# Crypto
ed25519-dalek.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
