[package]
name = "objects-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "P2P transport layer for OBJECTS Protocol"

[dependencies]
# Iroh (transport substrate - replaceable)
iroh.workspace = true
iroh-gossip.workspace = true

# Crypto (standard, not Iroh-specific)
ed25519-dalek.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait = "0.1"
async-stream = "0.3"

# Types
url = "2"
bytes = "1"

# Hashing
blake3 = "1"

# Random
rand.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
rstest = "0.26.1"           # Fixtures and parameterized tests
proptest = "1.4"            # Property-based testing
hex = "0.4"                 # Hex encoding for test data
