[package]
name = "objects-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Identity types, signatures, and ID derivation for OBJECTS Protocol"

[dependencies]
# Crypto
ed25519-dalek.workspace = true
p256.workspace = true
k256.workspace = true
sha2.workspace = true
bs58.workspace = true
rand.workspace = true
hex.workspace = true
hkdf.workspace = true
base64.workspace = true

# Iroh (for vault namespace types)
iroh-docs.workspace = true

# Ethereum (Alloy)
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true

# Serialization
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
objects-test-utils.workspace = true
tokio-test.workspace = true
tokio = { workspace = true, features = ["macros"] }
rstest = { workspace = true }
proptest = { workspace = true }
# Crypto libs for test fixtures (already in dependencies)
p256.workspace = true
k256.workspace = true
sha2.workspace = true
base64.workspace = true
alloy-primitives.workspace = true
rand.workspace = true

[features]
codegen = []

[build-dependencies]
prost-build.workspace = true
